syntax = "proto3";
package kvdb;
option go_package = "github.com/Hain2000/bitcask/protocol/grpc/kvdb";
service KVService {
	// 基本键值操作
	rpc Put(PutRequest) returns (PutResponse);
	rpc Get(GetRequest) returns (GetResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);

	// 集群管理
	rpc JoinCluster(JoinRequest) returns (JoinResponse);
	rpc ClusterStatus(StatusRequest) returns (StatusResponse);
}

// 请求/响应结构
message PutRequest {
	bytes key = 1;
	bytes value = 2;
}

message PutResponse {
	bool success = 1;
	string error = 2;
}

message GetRequest {
	bytes key = 1;
}

message GetResponse {
	bytes value = 1;
	bool found = 2;
	string error = 3;
}

message DeleteRequest {
	bytes key = 1;
	bytes value = 2;
}

message DeleteResponse {
	string error = 1;
}


message JoinRequest {
	string node_id = 1;
	string raft_address = 2;
}

message JoinResponse {
	bool success = 1;
	string error = 2;
}

message StatusRequest {} // 空请求

message StatusResponse {
	string leader_id = 1;
	repeated Node nodes = 2;
}

message Node {
	string id = 1;
	string address = 2;
}